--- a/css/style.css
+++ b/css/style.css
@@ -725,3 +725,129 @@ body {
 .varejo {
   max-width: 1000px;
 }
+
+.custom-carousel {
+  position: relative;
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 10px 40px;
+}
+
+.cc-track-wrapper {
+  overflow: hidden;
+}
+
+.cc-track {
+  display: flex;
+  gap: 20px;
+  transition: transform 0.6s ease;
+}
+
+.cc-item {
+  min-width: calc((100% - 40px) / 3); /* desktop: 3 por tela */
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+/* ----- MOBILE (2 itens por vez) ----- */
+@media (max-width: 576px) {
+  .cc-item {
+      min-width: calc((100% - 20px) / 2); /* mobile: 2 itens */
+  }
+}
+
+/* Botões */
+.cc-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 5;
+  background:transparent;
+  color: black;
+  border: none;
+  font-size: 26px;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background .3s;
+}
+
+.cc-arrow:hover {
+  background: rgba(163, 163, 163, 0.7);
+}
+
+.cc-prev { left: 3px; }
+.cc-next { right: 3px; }
+
+/* ------- MODAL ------- */
+.cc-modal {
+  display: none;
+  position: fixed;
+  z-index: 99999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.75);
+  justify-content: center;
+  align-items: center;
+}
+
+.cc-modal-content {
+  position: relative;
+  max-width: 90vw;
+  max-height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+}
+
+.cc-modal img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain; /* garante que NUNCA corte */
+  border-radius: 12px;
+}
+
+/* Botão de fechar */
+.cc-close {
+  position: absolute;
+  top: 1px;
+  right: 20px;
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  text-shadow: 0 0 8px rgba(0,0,0,0.6);
+  z-index: 10;
+}
+
+/* ------- BOTÃO "TENHO INTERESSE" ------- */
+.cc-btn-interest {
+  position: absolute;
+  top: 12px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #03c36a;
+  color: white;
+  border: none;
+  padding: 8px 18px;
+  font-size: 15px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 600;
+  z-index: 10;
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+  transition: background .2s;
+}
+
+
+.cc-btn-interest:hover {
+  background: #008f4f;
+}
