--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 
 .top-marquee2 {
   width: 100%;
-  background: #ffffff;
+  background: #888888;
   overflow: hidden;
   white-space: nowrap;
   padding: 8px 0;
