--- a/css/style.css
+++ b/css/style.css
@@ -306,10 +306,32 @@ body {
   border-radius: 0 1px 1px 0;
 }
 
+.retangulo1b {
+  width: 450px;
+  height: 12px;
+  background: #fff;
+  border-radius: 1px 0 0 1px;
+}
+
+.retangulo2b {
+  width: 450px;
+  height: 12px;
+  background: #fff;
+  border-radius: 0 1px 1px 0;
+}
+
+
 .retangulo-menor {
   width: 12px;
   height: 12px;
   background: #ea3131;
+  border-radius: 1px;
+}
+
+.retangulo-menor2 {
+  width: 12px;
+  height: 12px;
+  background: #fff;
   border-radius: 1px;
 }
 
